force-app/main/default/objects/Contact/fields/Associated_Property__c.field-meta.xml
<CustomField>
    <fullName>Associated_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Tenants</relationshipLabel>
    <relationshipName>Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>