force-app/main/default/objects/Contact/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>