force-app/main/default/objects/Contact/fields/Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date__c</fullName>
    <formula>IF(AND(ISPICKVAL(Lease_Length__c,&quot;1 Year&quot;), NOT(ISBLANK(Lease_Start_Date__c))),
DATE(YEAR(Lease_Start_Date__c)+1,MONTH(Lease_Start_Date__c),DAY(Lease_Start_Date__c)),
IF(AND(ISPICKVAL(Lease_Length__c,&quot;2 Year&quot;), NOT(ISBLANK(Lease_Start_Date__c))),
DATE(YEAR(Lease_Start_Date__c)+2,MONTH(Lease_Start_Date__c),DAY(Lease_Start_Date__c)),
IF(AND(ISPICKVAL(Lease_Length__c,&quot;3 Year&quot;), NOT(ISBLANK(Lease_Start_Date__c))),
DATE(YEAR(Lease_Start_Date__c)+3,MONTH(Lease_Start_Date__c),DAY(Lease_Start_Date__c)),
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>