force-app/main/default/objects/Contact/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <inlineHelpText>Required for fixed leases.</inlineHelpText>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>