force-app/main/default/objects/Contact/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <inlineHelpText>Ongoing leases are billed on a month to month basis. Fixed leases are billed until the end of the lease.</inlineHelpText>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month-to-Month</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>