force-app/main/default/objects/Contact/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.example.com/search?arg1=&quot; + Account.Name + &quot;&amp;num=2&quot;, &quot;Google&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test URL</label>
    <type>Text</type>
</CustomField>