force-app/main/default/objects/Contact/fields/Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Profile__c</fullName>
    <description>Twitter profile URL for a contact.</description>
    <inlineHelpText>Enter the URL for this contact&apos;s Twitter Profile.</inlineHelpText>
    <label>Twitter Profile</label>
    <type>Url</type>
</CustomField>