force-app/main/default/objects/Contact/recordTypes/Maintenance_Contact.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Contact</fullName>
    <active>true</active>
    <label>Maintenance Contact</label>
</RecordType>