force-app/main/default/objects/Contact/validationRules/Only_Owner_Can_Change_Twitter_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owner_Can_Change_Twitter_Profile</fullName>
    <active>true</active>
    <description>Ensures only the contact owner changes the Twitter Profile field.</description>
    <errorConditionFormula>AND(
  ISCHANGED( Twitter_Profile__c ),
  OwnerId  &lt;&gt; $User.Id
)</errorConditionFormula>
    <errorDisplayField>Twitter_Profile__c</errorDisplayField>
    <errorMessage>Only the contact owner may change the Twitter Profile field for the contact.</errorMessage>
</ValidationRule>